[package]
name = "gasp"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nalgebra = "0.34.1"
numpy = "0.27"
parry2d = "0.25.3"
parry3d = "0.25.3"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }

[dev-dependencies]
approx = "0.5.1"
