[project]
name = "gasp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "subhajitbn", email = "964468+subhajitbn@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
gasp = "gasp:main"

[tool.maturin]
module-name = "gasp._core"
python-packages = ["gasp"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
