[project]
name = "gasp-python"
version = "0.0.7"
description = "High-performance proportional sampling from point cloud clusters with geometric size measures and sampling measures."
readme = "README.md"
authors = [
    { name = "subhajitbn", email = "964468+subhajitbn@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.scripts]
gasp = "gasp:main"

[tool.maturin]
module-name = "gasp._core"
python-packages = ["gasp"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
